# university-gpt

./: .dockerignore  .env.example  .env_bak  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  Pipfile  README.md  alembic.ini  asgi.py  docker-compose-dev.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_migrations.py  team.md
.devcontainer/: devcontainer.json
alembic/: env.py
api/: app.py  config.py
app/: app.py  config.py  init_data.py  main.py  quiz.py  university.py  utils.py
app/api/: deps.py  (+1 more)
assessment-evals/: .env.example  .env.gcp.yaml  Dockerfile  Dockerfile.dev  Makefile  alembic.ini  pyproject.toml
assessment-evals/alembic/: env.py
assessment-evals/alembic/versions/: 4d181bc86132_add_datalayer_v1.py  d77e08f8d23d_added_account_table.py
assessment-evals/app/: init_data.py  main.py  settings.py  tests_pre_start.py
assessment-evals/app/api/: deps.py
assessment-evals/app/api/v1/: api.py
assessment-evals/app/api/v1/routes/: answersheet.py
assessment-evals/app/core/: db_eng.py  requests.py  utils.py
assessment-evals/app/crud/: answersheet_crud.py  answerslot_crud.py  health_crud.py
assessment-evals/app/models/: answersheet_model.py  answerslot_model.py  base.py  health_models.py  quiz_runtime_model.py
assessment-evals/app/service/: quiz_attempt_manager.py
assessment-evals/tests/: conftest.py
assessment-evals/tests/api/routes/: test_answersheet.py  test_health.py
bookgpt/: question_bank.py  quiz.py
database/: alembic.ini  common.py  models.py  university_gpt_erd.drawio
docs/: 0-roadmap.md  1-async-engine.md  1-async-vs-sync-db-engine.md  1-asyncvs sync-db-engine.md  2-development-setup.md  2-development.md  3-deployment.md  3-vscode-containor.md  4-new-development-guide.md  init-readme.md
educational-program/: .dockerignore  .env.example  .env.gcp.yaml  Dockerfile  Dockerfile.dev  Makefile  pyproject.toml
educational-program/alembic/: env.py
educational-program/alembic/versions/: 7f99d6f427a4_add_educational_program_models.py
educational-program/app/: init_data.py  main.py  settings.py  tests_pre_start.py
educational-program/app/api/: deps.py
educational-program/app/api/v1/: api.py
educational-program/app/api/v1/routes/: course.py  health.py  program.py  university.py
educational-program/app/core/: db_eng.py  requests.py  utils.py
educational-program/app/crud/: course_crud.py  health_crud.py  program_crud.py  university_crud.py
educational-program/app/models/: base.py  course_models.py  health_models.py  program_models.py  university_models.py
educational-program/tests/: conftest.py
educational-program/tests/api /routes/: test_course.py  test_health.py  test_program.py  test_university.py
educational-program/tests/api/routes/: test_course.py  test_health.py  test_program.py  test_university.py
educational-program/tests/crud/: test_course.py  test_program.py  test_university.py
educational-program/tests/utils/: test_items.py
migrations/: env.py
question-bank/: Dockerfile.dev  pyproject.toml
question-bank/alembic/: env.py
question-bank/alembic/versions/: ecce09a957d0_add_topic_and_question_engine_models.py
question-bank/app/: init_data.py  main.py
question-bank/app/api/: deps.py
question-bank/app/api/v1/: api.py
question-bank/app/crud/: health_crud.py
question-bank/app/models/: question_models.py  topic_models.py
question-bank/tests/: conftest.py
question-bank/tests/api/routes/: test_health.py  test_question.py  test_topic.py
question-bank/tests/crud/: test_question_crud.py
question-bank/tests/utils/: test_items.py
quiz-attempt-platform/: .env.example  Makefile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
quiz-engine/: .env.example  .env.gcp.yaml  Dockerfile  Dockerfile.dev  Makefile  pyproject.toml
quiz-management/: Dockerfile.dev
quiz-temp-monorepo/: .env.example  Dockerfile.dev  README.md  alembic.ini  docker-compose-dev.yml  pyproject.toml  team.md
(+269 files in other folders)
